# photo-vlm-mcp

./: .gitattributes  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: clients.md  evaluation.md  release.md
scripts/: evaluate.py  qa.ps1  setup.ps1
src/photo_vlm_mcp/: __init__.py  __main__.py  cli.py  config.py  errors.py  images.py  ocr.py  ollama.py  prompts.py  server.py
tests/: test_cli.py  test_config.py  test_images.py  test_ollama.py  test_prompts.py  test_server.py
